# llm-scrabble-eval

./: .gitignore  README.md  analyze_results.ipynb  eval.py  eval_test.py  predict.py  pyproject.toml  results-2025-02-01.json  results-gemma-27b-ollama-l4.json  results-gemma-9b-ollama-l4.json  results-granite-dense.json  results-llama-3.1-tulu-3-8b-l4.json  results-phi-4.json  word_validator.py  word_validator_test.py
