[project]
name = "llm-word-generation-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["openai", "nltk"]

[dependency-groups]
dev = [
    "jupyterlab>=4.3.5",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.4",
]
